# defecta-processor

./: .gitignore  README.md  pyproject.toml
src/: app.py
