[project]
name = "defecta-processor"
version = "0.1.0"
description = ""
authors = [
    {name = "rakhmadbudiono",email = "rakhmadbudiono211@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7"
dependencies = [
    "streamlit (>=1.42.2,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "openai (>=1.64.0,<2.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)"
]


[tool.poetry]
packages = [
    { include = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

